Implementacion modulo de vacunacion